# defeasible-argumentation

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
argkit/: __init__.py  aaf.py  build.py  curate.py  export.py  llm_adapters.py  pipeline.py  qc.py  schema.py  seed.py  structured.py
artifact/: SHA256SUMS  argument_graph.v1.json
tests/: _builders.py  _oracle.py  test_aaf_differential.py  test_aaf_textbook.py  test_deploy_guard.py  test_pipeline_curate.py  test_qc.py  test_structured.py
web/: .gitignore  index.html  netlify.toml  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/scripts/: copy-artifact.mjs
web/src/: App.tsx  main.tsx  styles.css
web/src/components/: ArgumentDetailPanel.tsx  ArgumentGraph.tsx  Badge.tsx  BriefingSection.tsx  Footer.tsx  GraphSection.tsx  Header.tsx  PreferenceSection.tsx  ProvenanceSection.tsx  edgeGeometry.ts  graphLayout.ts
web/src/model/: artifact.ts  loadArtifact.ts  selectors.ts
